# learning-python

./: README.md  pyproject.toml  setup.py
Outlook_Exporter/: Outlook_Exporter.py  hello.py  pyproject.toml
demo_packages/: oop_healthprofessional.py
practical-python/: README.md  requirements.txt
practical-python/fingertips_api/: fingertips_api.ipynb
practical-python/formatted_excel/: formatted_excel_demo.ipynb
practical-python/formatted_excel/data/: QWC1_Q1_23-24_QRL-D9Y0V-10R_V3.xlsx
practical-python/multiple_spreadsheets/: multiple_spreadsheets.ipynb
practical-python/multiple_spreadsheets/data/: LD_AT_DataTables_2021_04.xlsx  LD_AT_DataTables_2021_05.xlsx  LD_AT_DataTables_2021_06.xlsx  LD_AT_DataTables_2021_07.xlsx  LD_AT_DataTables_2021_08.xlsx  LD_AT_DataTables_2021_09.xlsx  LD_AT_DataTables_2021_10.xlsx  LD_AT_DataTables_2021_11.xlsx  (+34 more)
practical-python/polar-exploration/: eda_with_polars.ipynb  polar-exploration-solutions.ipynb  polar-exploration-workbook.ipynb  polar-exploration.ipynb  pyproject.toml
practical-python/polar-exploration/data/: simple_monthly_timeseries_data.csv
practical-python/visualisation_examples/: README.md  ordered_monthly_line_chart.py  ordered_months.ipynb
practical-python/webscraping/: webscraping.ipynb
programming-concepts/: datatypes.pptx  datatypes.py  healthprofessional_demo.py  oop.ipynb  pyproject.toml
programming-concepts/python-data-types/: datatypes.py  hello.py
python-data-types/: datatypes.py  pyproject.toml
visualising-with-seaborn/: hello.py  pyproject.toml  surgery-visualising-data-with-seaborn.ipynb
(+4 files in other folders)
